# chess

./: .gitignore
chess2/: CMakeCache.txt  CMakeLists.txt  Makefile  board.cpp  board.h  chess  chess2.sln  chess2.vcxproj  chess2.vcxproj.filters  cmake_install.cmake  load_peaces.cpp  load_peaces.h  main.cpp  mohre.cpp  mohre.h
chess2/Debug/: chess2.exe.recipe  chess2.ilk  chess2.vcxproj.FileListAbsolute.txt  vc143.idb
chess2/Debug/chess2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  chess2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
chess2/include/: board.h  load_peaces.h  mohre.h
chess2/src/: board.cpp  load_peaces.cpp  main.cpp  mohre.cpp
